[package]
name = "bevy_native"
version = "0.1.0"
edition = "2021"

[features]
default = ["native_ui", "dep:bevy"]
native_ui = []

[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
bevy-trait-query = { git = "https://github.com/dead-money/bevy-trait-query", branch = "bevy-0.14" }
uuid = { version = "1.9.1", features = ["v4"] }
serde = { version = "1.0.149", features = ["derive"] }
bevy = { version = "=0.14.0", default-features = false }
bevy_builder = { git = "https://github.com/empathic-ai/bevy-builder.git" }
common = { git = "https://github.com/empathic-ai/common.git" }
lazy_static = "1.4.0"
base64 = "0.21.5"
regex = "1.7.1"
# my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }
bevy_cobweb = "0.10.1"

[dependencies.bevy]
version = "=0.14.0"
default-features = false
features = ["bevy_ui", "bevy_asset"]
optional = true

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
url = "2.4.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3.72"
features = [
    "History",
    "Location",
    "HtmlDivElement",
    'HtmlDocument',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "console",
    "Window",
    "CustomEvent",
    "Document",
    "Text",
    "XPathResult",
    "Element",
    "Node",
    "DomRect",
    "HtmlElement",
    "XPathNsResolver",
    "HtmlInputElement",
    "KeyboardEvent",
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "MediaStreamConstraints",
    "HtmlVideoElement",
    "Url",
    "MediaStream",
    "MediaDevices",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Navigator",
    "HtmlIFrameElement",
    "MessagePort",
    "BlobEvent",
    "FontFaceSet",
    "FontFace",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "UrlSearchParams",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly"
]

[dependencies]
serde_json = "1.0"
