[package]
name = "bevy_native"
version = "0.1.0"
edition = "2024"

[features]
default = ["native_ui", "bevy"]
bevy = ["dep:bevy", "flux/bevy"]
native_ui = []
std = ["bevy?/bevy_ui", "bevy?/bevy_asset"]

[dependencies]
serde_json = "1.0"
bevy = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false, optional = true }

[target.'cfg(not(target_arch = "xtensa"))'.dependencies]
bevy-trait-query = { git = "https://github.com/Catchawink/bevy-trait-query.git", branch = "reflect/serializable-dynamic-types" }
uuid = { version = "1.13", features = ["v4"] }
serde = { version = "1.0.149", features = ["derive"] }
bevy = { git = "https://github.com/empathic-ai/bevy.git", branch = "reflect/serializable-dynamic-types", default-features = false }
flux = { git = "https://github.com/empathic-ai/flux.git", default-features = false }
common = { git = "https://github.com/empathic-ai/common.git" }
lazy_static = "1.4.0"
base64 = "0.22.1"
regex = "1.7.1"
# my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }
# bevy_cobweb = "0.14.3"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
url = "2.4.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3.72"
features = [
    "History",
    "Location",
    "HtmlDivElement",
    'HtmlDocument',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "console",
    "Window",
    "CustomEvent",
    "Document",
    "Text",
    "XPathResult",
    "Element",
    "Node",
    "DomRect",
    "HtmlElement",
    "XPathNsResolver",
    "HtmlInputElement",
    "KeyboardEvent",
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "MediaStreamConstraints",
    "HtmlVideoElement",
    "Url",
    "MediaStream",
    "MediaDevices",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Navigator",
    "HtmlIFrameElement",
    "MessagePort",
    "BlobEvent",
    "FontFaceSet",
    "FontFace",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "UrlSearchParams",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly"
]
